# stake_proxy

./: Anchor.toml  package.json
programs/solana-bridge/: Cargo.toml
programs/solana-bridge/src/: constants.rs  error.rs  lib.rs
programs/solana-bridge/src/instructions/: cash_out.rs  cash_out_sol.rs  enable_chain.rs  enable_token.rs  initialize.rs  mod.rs  payout.rs  payout_sol.rs  update_manager.rs  update_nonce.rs
programs/solana-bridge/src/state/: chain_config.rs  mod.rs  system_config.rs  token_config.rs
programs/solana-bridge/src/utils/: mod.rs  secp256k1.rs
programs/stake-proxy/: Cargo.toml
programs/stake-proxy/src/: constants.rs  error.rs  lib.rs
programs/stake-proxy/src/instructions/: deactivate.rs  delegate_stake.rs  initialize.rs  initialize_account.rs  mod.rs  withdraw.rs
programs/stake-proxy/src/state/: mod.rs  stake_info.rs
scripts/: cash_out.ts  cash_out_sol.ts  init.ts  init_dev.ts  query_nonce.ts  update_manager.ts  update_nonce.ts
tests/: solana-bridge.ts  stake-proxy.ts
